--- a/blog/templates/reports/list.html
+++ b/blog/templates/reports/list.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-User list
+    Report list
 {% endblock %}
 
 {% block body %}
     <div class="row">
         <div class="col">
-            <h1>Users</h1>
-            {% for user_id in users %}
+            <h1> Report </h1>
+            {% for report in reports  %}
             <ul>
-                <li><a href="{{ url_for('user.get_user', pk=user_id)}}"> {{ users[user_id] }}</a></li>
+                <li>{{ report }}</li>
             </ul>
             {% endfor %}
         </div>
