--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('report.report_list') }}">Reports</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('hw.user_list') }}">Произведения</a>
+                </li>
             </ul>
         </div>
     </div>
