--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -16,6 +16,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('hw.user_list') }}">Произведения</a>
                 </li>
+                {% if current_user.is_authentivated %}
+                    <li class="nav-item">
+                         Logout
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
