--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">My App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,18 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link " href="{{ url_for('user.user_list') }}">Users</a>
+                    <a class="nav-link" href="{{ url_for('user.user_list') }}">Users</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('report.report_list') }}">Reports</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('hw.user_list') }}">Произведения</a>
-                </li>
-                {% if current_user.is_authentivated %}
+                {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                         Logout
-                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+                        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout ({{ current_user.email }})</a>
                     </li>
                 {% endif %}
             </ul>
